# orzma

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  about.hbs  about.toml  biome.json  deny.toml  justfile  libstdin.rlib  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/orzbrowser/: Cargo.toml  README.md
apps/orzbrowser/src/: app.rs  keymap.rs  main.rs  orzma_hints.js  ui.rs
apps/ozbrowser/: Cargo.toml  README.md
apps/ozbrowser/src/: app.rs  history.rs  main.rs  ozma_hints.js  ui.rs
apps/ozmd/: Cargo.toml  README.md  build.mjs  package.json  tsconfig.json
apps/ozmd/src/: app.rs  document.rs  keymap.rs  local_assets.rs  main.rs  outline.rs  protocol.rs  ui.rs  watcher.rs
apps/ozmd/web/: anchors.test.ts  anchors.ts  images.test.ts  images.ts  index.html  links.test.ts  links.ts  main.ts  render.test.ts  render.ts  search.test.ts  search.ts  url.ts
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  daemon_client.rs  extension.rs  main.rs  process.rs
cli/src/commands/: browser.rs  daemon.rs  session.rs
cli/src/process/: detach.rs
cli/tests/: daemon_lifecycle.rs  session_attach.rs  session_create.rs  session_new.rs
client/: Cargo.toml  tauri.conf.json
client/binaries/: .gitignore
client/src/: Cargo.toml  daemon.rs  lib.rs  main.rs
crates/bevy_terminal/: Cargo.toml
crates/bevy_terminal/src/: bundle.rs  buttons.rs  coalescer.rs  events.rs  handle.rs  input_codec.rs  lib.rs  mouse_encode.rs  osc7.rs  osc_webview.rs  plugin.rs  pty.rs  title.rs  vt.rs  wheel.rs
crates/bevy_terminal/tests/: integration.rs  key_input.rs
crates/extension_host/: Cargo.toml
crates/extension_host/src/: asset.rs  bridge.rs  command.rs  control.rs  dyn_scheme.rs  error.rs  extension_discovery.rs  extension_manifest.rs  handlers_bridge.rs  host.rs  host_descriptor.rs  host_process.rs  lib.rs  manifest.rs  path_prefix.rs  plugin_discovery.rs  plugin_manifest.rs  protocol.rs  registry.rs  rpc_client.rs  scheme.rs
crates/extension_host/tests/: command_round_trip.rs  control_bridge_e2e.rs  round_trip.rs
crates/multiplexer/: Cargo.toml
crates/multiplexer/src/: cells.rs  commands.rs  components.rs  direction.rs  error.rs  layout.rs  lib.rs  mirror.rs  observers.rs  plugin.rs  resize.rs  swap.rs
crates/orzma_tty_engine/: Cargo.toml
crates/orzma_tty_engine/src/: bundle.rs  coalescer.rs  control_mode.rs  events.rs  handle.rs  input_codec.rs  lib.rs  palette.rs  raw_write.rs  resize.rs  wheel.rs
crates/orzma_tty_engine/tests/: decset_mouse.rs  integration.rs  key_input.rs
crates/ozma_mode/: Cargo.toml
crates/ozma_mode/src/: exit.rs  layout.rs  lib.rs  spawn.rs
crates/ozma_terminal/: Cargo.toml
crates/ozma_terminal/src/: action.rs  clipboard.rs  hyperlink.rs  input.rs  layout.rs  lib.rs  mouse.rs  spawn.rs
crates/ozma_webview/: Cargo.toml
crates/ozma_webview/src/: control_plane.rs  lib.rs  webview.rs
crates/ozmux_configs/: Cargo.toml
crates/ozmux_configs/src/: copy_mode.rs  error.rs  font.rs  inactive_pane.rs  keyboard.rs  lib.rs  mouse.rs  osc_webview.rs  ozma.rs  path.rs  raw.rs  scrollback.rs  shortcuts.rs  startup.rs  theme.rs  tmux.rs
crates/ozmux_configs/tests/: load.rs
crates/tmux_control/: Cargo.toml
crates/tmux_control/src/: command.rs  error.rs  lib.rs  protocol.rs  session.rs  transport.rs  window_list.rs
crates/tmux_session/: Cargo.toml
crates/tmux_session/src/: command.rs  components.rs  connect.rs  connection.rs  copy_queries.rs  enumerate.rs  event_pump.rs  events.rs  input.rs  keybindings.rs  keybinds.rs  lib.rs  model.rs  observers.rs  output.rs  plugin.rs  reconcile.rs  select.rs  state.rs
crates/tmux_session/tests/: real_tmux.rs  real_tmux_boot.rs  real_tmux_enumeration.rs  real_tmux_input.rs  real_tmux_keybindings.rs  real_tmux_mouse.rs  real_tmux_multiclient.rs  real_tmux_pane.rs  real_tmux_pane_focus.rs  real_tmux_projection.rs  real_tmux_resize.rs  real_tmux_switch.rs  real_tmux_window.rs
crates/webview_host/: Cargo.toml
crates/webview_host/src/: asset.rs  dyn_scheme.rs  host.rs  lib.rs  orzma_scheme.rs  ozma_scheme.rs
daemon/bevy_terminal_render/: Cargo.toml
daemon/bevy_terminal_render/src/: glyph.rs  grid.rs  material.rs  schema.rs
daemon/bootstrap/: Cargo.toml
daemon/bootstrap/src/: builtin_commands.rs  cef_lifecycle.rs  lib.rs  main.rs  pidfile.rs
daemon/bootstrap/tests/: ozmux_daemon_binary.rs
daemon/browser/: Cargo.toml
daemon/browser/src/: bridge.rs  bytes_serde.rs  cef_backend.rs  cef_dispatcher.rs  cef_registry.rs  cef_service.rs  cookie.rs  cookie_extractor.rs  error.rs  frame_ring.rs  input.rs  lib.rs  page.rs  service.rs  shm_alloc.rs  shm_reader.rs  snapshot.rs  state.rs  wire.rs
daemon/browser/tests/: cef_host_handshake.rs  shm_reader_seqlock.rs  unavailable_per_aid.rs
daemon/cef_host/: Cargo.toml
daemon/cef_host/examples/: spike_compile.rs  spike_ime.rs  spike_init.rs  spike_post_task.rs
daemon/cef_host/src/: browser_app.rs  cef_settings.rs  control.rs  cookies.rs  extension_bridge.rs  frame_buffer_pool.rs  handlers.rs  input.rs  lib.rs  main.rs  pool.rs  post_command.rs  process_message.rs  profile.rs  scheme.rs  shm_writer.rs  v8_binding.rs
daemon/cef_host/tests/: cookies_test.rs  pool_queue_test.rs  shm_writer_test.rs
daemon/configs/: Cargo.toml
daemon/configs/src/: browser.rs  defaults.rs  error.rs  font.rs  lib.rs  mouse.rs  path.rs  raw.rs  shortcuts.rs  theme.rs
daemon/configs/tests/: load.rs
daemon/core/: Cargo.toml
daemon/core/src/: error.rs  extension.rs  http.rs  macros.rs  main.rs  pty.rs  session.rs
daemon/extension/: Cargo.toml
daemon/extension/src/: commands.rs  error.rs  handle.rs  host.rs  lib.rs  manifest.rs  registry.rs  runtime.rs  service.rs
daemon/extension/tests/: e2e.rs
daemon/extension_host/: Cargo.toml
daemon/extension_host/src/: command.rs  lib.rs  manifest.rs  registry.rs
daemon/http_server/: Cargo.toml  build.rs
daemon/http_server/src/: error.rs  lib.rs  (+13 more)
daemon/macros/: Cargo.toml
daemon/multiplexer/: Cargo.toml
daemon/ozmux_cli/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+1485 files in other folders)
