[package]
name = "orzma"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "orzma"
path = "src/main.rs"

[features]
# Default-on for development: `cargo run` / `just run` load CEF from
# ~/.local/share/cef via bevy_cef's debug loader. Distribution builds MUST
# drop this — the bundler builds with `--no-default-features` so the release
# binary loads CEF from the app's bundled Contents/Frameworks instead.
default = ["debug"]
debug = ["orzma_webview/debug"]

[dependencies]
ab_glyph = "0.2"
anyhow = { workspace = true }
arboard = { version = "3", features = ["wayland-data-control"] }
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
orzma_tty_renderer = { path = "crates/orzma_tty_renderer" }
orzma_tty_engine = { path = "crates/orzma_tty_engine" }
orzma_webview = { path = "crates/orzma_webview" }
crossbeam-channel = "0.5"
data-encoding = "2"
# NOTE: default-features = false keeps fontique's `system` backend off,
# matching bevy_text's parley configuration — enabling it here would turn on
# system font discovery for the whole dependency graph via feature unification.
fontique = { version = "0.9", default-features = false, features = ["std"] }
getrandom = "0.2"
libc = "0.2"
open = { workspace = true }
orzma_configs = { path = "crates/orzma_configs" }
orzma_webview_host = { path = "crates/webview_host", features = ["cef"] }
orzma_tmux = { path = "crates/orzma_tmux" }
tmux_control = { path = "crates/tmux_control" }
tmux_control_parser = { path = "crates/tmux_control_parser" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"

[lints]
workspace = true

[workspace]
resolver = "2"
members = [
  "crates/*", "sdk/ratatui_orzma", "apps/orzmd", "apps/orzbrowser",
]

[workspace.package]
version = "0.2.0-dev"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["notelm"]
repository = "https://github.com/not-elm/orzma"
publish = false

[workspace.dependencies]
# NOTE: default_font is load-bearing for every `Handle::<Font>::default()`
# consumer (e.g. src/ui/vi_mode_indicator.rs before TerminalUiFont exists, and
# the font.rs / ime_overlay.rs tests) — the default handle only resolves to
# FiraMono when default_font is enabled. The feature is currently part of
# bevy's default set via default_platform → default_font, but listing it
# explicitly here protects against future "default-features = false".
bevy = { version = "0.19", features = ["default_font"] }
anyhow = { version = "1" }
thiserror = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bitflags = "2"
portable-pty = "0.9"
tracing = "0.1"
tempfile = "3"
toml = "0.8"
dirs = "5"
unicode-width = "0.2"
unicode-segmentation = "1"
open = "5"
bevy_cef = "0.12"
bevy_cef_core = "0.12"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = true
