[package]
name = "ozmux_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
tracing-chrome = ["daemon_bootstrap/tracing-chrome"]

[[bin]]
name = "ozmux"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "process"] }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
daemon_bootstrap = { path = "../daemon/bootstrap" }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process"] }
libc = { workspace = true }
