[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cef = { version = "148.1.0", features = ["build-util"] }
semver = "1"
