# NOTE: standalone (own `[workspace]` below) — excluded from the root workspace
# so its cef v148 dep does not collide with bevy_cef_core's cef v145
# (`links = "cef_dll_wrapper"`). Keep deps concrete here, not workspace-inherited.
[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cef = { version = "148.1.0", features = ["build-util"] }
semver = "1"
