[package]
name = "orzbrowser"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "orzbrowser"
path = "src/main.rs"

[dependencies]
ratatui_orzma = { path = "../../sdk/ratatui_orzma" }
ratatui = "0.29"
serde_json = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = "0.5"

[lints]
workspace = true
