[package]
name = "bevy_terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_terminal_render = { path = "../../daemon/bevy_terminal_render" }
alacritty_terminal = "0.26"
vte = "0.15"
portable-pty = { workspace = true }
crossbeam-channel = "0.5"
unicode-width = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
