[package]
name = "bevy_terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_terminal_renderer = { path = "../bevy_terminal_renderer" }
alacritty_terminal = { workspace = true }
ozmux_vt = { path = "../../daemon/ozmux_vt" }
vte = "0.15"
portable-pty = { workspace = true }
crossbeam-channel = "0.5"
unicode-width = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
percent-encoding = "2"
gethostname = "1"

[lints]
workspace = true
