[package]
name = "ozmux_extension_host"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# Pulls the bevy_cef_core path-dep + the ozmux-ext:// scheme handler.
# Off by default so the core builds/tests with std + crossbeam only.
cef = ["dep:bevy_cef_core"]

[dependencies]
# TODO: used by the host lifecycle channel (Task 3)
crossbeam-channel = "0.5"
# Local-only path dep (the bevy_cef feat/ui-material branch is unmerged); the
# `cef` feature is OFF by default. Resolvable only because xtask (cef v148) is
# excluded from the workspace, so there is no `links = "cef_dll_wrapper"`
# conflict. Adjust this path to your bevy_cef checkout.
bevy_cef_core = { path = "/Users/watanabe/workspace/bevy_cef/crates/bevy_cef_core", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
