[package]
name = "ozmux_multiplexer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
thiserror = { workspace = true } 
tracing = { workspace = true }

[lints]
workspace = true
