[package]
name = "ozmux_multiplexer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[features]
thin-client = []

[dependencies]
bevy = { workspace = true }
ozmux_mux = { path = "../../daemon/ozmux_mux" }
ozmux_proto = { path = "../../daemon/ozmux_proto" }
slotmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
