[package]
name = "orzma_tty_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
orzma_tty_renderer = { path = "../orzma_tty_renderer" }
alacritty_terminal = "0.26"
vte = "0.15"
portable-pty = { workspace = true }
crossbeam-channel = "0.5"
unicode-width = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
percent-encoding = "2"
gethostname = "1"

[lints]
workspace = true
