[package]
name = "ozmux_configs"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[features]
test_support = []

[[test]]
name = "load"
required-features = ["test_support"]

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
