[package]
name = "tmux_control"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
tmux_control_parser = { path = "../tmux_control_parser/" }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
