[package]
name = "ozmux_tmux"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozma_tty_engine = { path = "../ozma_tty_engine" }
tmux_control = { path = "../tmux_control" }
tmux_control_parser = { path = "../tmux_control_parser" }
bevy = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
