[package]
name = "ozmux_webview_host"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# Pulls the bevy_cef_core path-dep + the ozma-dyn:// scheme handler.
# Off by default so the core builds/tests with std only.
cef = ["dep:bevy_cef_core"]

[dependencies]
bevy = { workspace = true }
bevy_cef_core = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
