[package]
name = "bevy_terminal_render"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
ab_glyph = "0.2"
unicode-segmentation = "1"
unicode-width = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
rmp-serde = "1"

[lints]
workspace = true
