[package]
name = "daemon_bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "daemon_bootstrap"
path = "src/lib.rs"

[dependencies]
ozmux_browser = { path = "../browser" }
ozmux_configs = { path = "../configs" }
ozmux_extension = { path = "../extension" }
ozmux_http_server = { path = "../http_server" }
ozmux_multiplexer = { path = "../multiplexer" }
ozmux_terminal = { path = "../terminal" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
