[package]
name = "ozmux_browser"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozmux_multiplexer = { path = "../multiplexer" }
ozmux_extension = { path = "../extension" }
ozmux_browser_cef_protocol = { path = "../browser_cef_protocol" }
nix = { version = "0.29", features = ["mman", "fs"] }
libc = "0.2"
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"] }
base64 = "0.22"
decrypt-cookies = "0.11.1"
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "io-util", "process", "fs"] }
# NOTE: cef_service.rs::request_browser_create is a stub through Task A4; the
# real body lands in Task A5 and uses sendmsg_with_fds. Dependency kept so
# dead-dependency audits do not strip it before A5.
sendfd = "0.4"
tokio-util = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
ozmux_cef_host = { path = "../cef_host" }
