[package]
name = "ozmux_browser"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozmux_multiplexer = { path = "../multiplexer" }
ozmux_browser_cef_protocol = { path = "../browser_cef_protocol" }
ozmux_cef_host = { path = "../cef_host" }
url = "2"
decrypt-cookies = "0.11.1"
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "io-util", "process", "fs"] }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ozmux_extension = { path = "../extension" }
