[package]
name = "ozmux_cef_host"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cef_host"
path = "src/main.rs"

[[bin]]
name = "cef_helper"
path = "src/bin/cef_helper.rs"

[lib]
name = "ozmux_cef_host"
path = "src/lib.rs"

[dependencies]
cef = "148.1.0"
cef-dll-sys = { version = "148.1.0", features = ["sandbox"] }
nix = { version = "0.29", features = ["mman", "fs"] }
fs2 = "0.4"
libc = "0.2"
ozmux_browser_cef_protocol = { path = "../browser_cef_protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
sendfd = "0.4"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
decrypt-cookies = "0.11.1"

[dev-dependencies]
