[package]
name = "ozmux_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ozmux_macros = { path = "../macros" }
ozmux_session = { path = "../session" }
ozmux_extension_host = { path = "../extension_host" }
ozmux_terminal = { path = "../terminal" }
ozmux_http_server = { path = "../http_server" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
