[package]
name = "ozmux_extension"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
ozmux_macros = { path = "../macros" }
ozmux_session = { path = "../session" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
] }
tracing = { workspace = true }
thiserror = { workspace = true }
interprocess = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
