[package]
name = "ozmux_extension"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozmux_macros = { path = "../macros" }
ozmux_multiplexer = { path = "../multiplexer" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "process",
  "time",
] }
tracing = { workspace = true }
thiserror = { workspace = true }
interprocess = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
ozmux_terminal = { path = "../terminal" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
